--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
   </div>
 
 {% include analytics.html %}
+<script>
+  ((window.gitter = {}).chat = {}).options = {
+    room: 'coala-analyzer/coala'
+  };
+</script>
+<script src="https://sidecar.gitter.im/dist/sidecar.v1.js" async defer></script>
+
 </body>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 <script src="site.js"></script>
